onlinecomputerbooks.com (archived on 2007-12-31)
{
  "alexa_rank": NaN,
  "analysis_subcorpus": true,
  "categories": "education;informationtech",
  "char_count": 1255,
  "classifier_probability": 0.88,
  "cross_domain_homepage_redir": false,
  "flesch_ease": "very_confusing",
  "flesch_kincaid": 14.51,
  "homepage_snapshot_redirected_domain": "onlinecomputerbooks.com",
  "homepage_snapshot_redirected_url": "https://web.archive.org/web/20071011005851id_/http://www.onlinecomputerbooks.com/",
  "homepage_snapshot_url": "https://web.archive.org/web/20071011005851id_/http%3A//onlinecomputerbooks.com",
  "interval": "2007_B",
  "link_text": "Privacy Policy",
  "parked_domain": false,
  "phase": "B",
  "policy_domain": "onlinecomputerbooks.com",
  "policy_filetype": "html",
  "policy_snapshot_url": "https://web.archive.org/web/20071231164252id_/http%3A//www.onlinecomputerbooks.com/privacy-policy.php",
  "policy_title": "Privacy policy",
  "policy_url": "onlinecomputerbooks.com/privacy-policy.php",
  "sha1": "221df12fa4fd7445f3212a72e337616ea416959b",
  "simhash": 18096074089145525259,
  "simhash_updated": false,
  "site_hostname": "onlinecomputerbooks.com",
  "site_url": "http://onlinecomputerbooks.com",
  "smog": NaN,
  "strict_updated": false,
  "timestamp": "20071231164252",
  "word_count": 195,
  "year": 2007
}

--- a/o/on/onl/onlinecomputerbooks.com.html
+++ b/o/on/onl/onlinecomputerbooks.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the onlinecomputerbooks.com privacy policy that was archived on 2007-06-18.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20070618070638id_/http%3A//www.onlinecomputerbooks.com/privacy-policy.php) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the onlinecomputerbooks.com privacy policy that was archived on 2007-12-31.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20071231164252id_/http%3A//www.onlinecomputerbooks.com/privacy-policy.php) for the most accurate reproduction.-->
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd"><html xmlns="http://www.w3.org/1999/xhtml"><head>
 <title>Privacy policy</title>
@@ -10,7 +10,23 @@
 <body>
 <!-- header div -->
 <div id="hdr">
-<a href="http://www.onlinecomputerbooks.com"><img alt="Free Computer Books and Free Ebooks" src="http://www.onlinecomputerbooks.com/images/logo.gif" border="0"></a></div>
+<table width="100%" border="0">
+<tbody><tr>
+<td width="75%">
+<a href="http://www.onlinecomputerbooks.com"><img alt="Free Computer Books and Free Ebooks" src="http://www.onlinecomputerbooks.com/images/logo.gif" border="0"></a>
+</td>
+<td>
+<!-- Google CSE Search Box Begins  -->
+<form action="http://www.onlinecomputerbooks.com/searchresults.php" id="searchbox_013116683430932313732:dnhd6ttvf4u">
+  <input type="hidden" name="cx" value="013116683430932313732:dnhd6ttvf4u">
+  <input type="hidden" name="cof" value="FORID:11">
+  <input type="text" name="q" size="25">
+  <input type="submit" name="sa" value="Search">
+</form>
+<script type="text/javascript" src="http://www.google.com/coop/cse/brand?form=searchbox_013116683430932313732%3Adnhd6ttvf4u"></script>
+<!-- Google CSE Search Box Ends --></td>
+</tr>
+</tbody></table></div>
 <!-- center column -->
 <div id="c-block">
   <div id="c-col"> 
@@ -95,6 +111,22 @@ urchinTracker();
 </script></div>
 <!-- left column -->
 <div id="lh-col">
+<script type="text/javascript"><!--
+google_ad_client = "pub-6690961099756790";
+google_ad_width = 120;
+google_ad_height = 90;
+google_ad_format = "120x90_0ads_al_s";
+//2007-10-02: leftpanel_linkunit
+google_ad_channel = "4150743087";
+google_color_border = "EEEEEE";
+google_color_bg = "EEEEEE";
+google_color_link = "0000FF";
+google_color_text = "000000";
+google_color_url = "FFFFFF";
+//-->
+</script>
+<script type="text/javascript" src="http://pagead2.googlesyndication.com/pagead/show_ads.js">
+</script>
 &nbsp;<a href="http://www.onlinecomputerbooks.com/free-j2ee-books.php" class="mnutxt">Free J2EE books</a><br>
 &nbsp;<a href="http://www.onlinecomputerbooks.com/free-java-books.php" class="mnutxt">Free Java books</a><br>
 &nbsp;<a href="http://www.onlinecomputerbooks.com/free-dotnet-books.php" class="mnutxt">Free .NET books</a><br>
@@ -118,7 +150,6 @@ urchinTracker();
 &nbsp;<a href="http://www.onlinecomputerbooks.com/free-freebsd-books.php" class="mnutxt">Free FreeBSD books</a><br>
 &nbsp;<a href="http://www.onlinecomputerbooks.com/free-information-technology-books.php" class="mnutxt">Free IT books</a><br>
 &nbsp;<a href="http://www.onlinecomputerbooks.com/free-revision-control-books.php" class="mnutxt">Free Revision Control books</a><br>
-&nbsp;<a href="http://www.onlinecomputerbooks.com/free-apache-books.php" class="mnutxt">Free Apache books</a><br>
 &nbsp;<a href="http://www.onlinecomputerbooks.com/free-networking-books.php" class="mnutxt">Free Networking books</a><br>
 &nbsp;<a href="http://www.onlinecomputerbooks.com/free-software-engineering-books.php" class="mnutxt" title="Free Software Engineering books">Free Software Eng. books</a><br>
 &nbsp;<a href="http://www.onlinecomputerbooks.com/free-mysql-books.php" class="mnutxt">Free MySQL books</a><br>
@@ -127,9 +158,34 @@ urchinTracker();
 &nbsp;<a href="http://www.onlinecomputerbooks.com/free-javascript-books.php" class="mnutxt">Free JavaScript books</a><br>
 &nbsp;<a href="http://www.onlinecomputerbooks.com/free-security-books.php" class="mnutxt">Free Security books</a><br>
 &nbsp;<a href="http://www.onlinecomputerbooks.com/free-hardware-books.php" class="mnutxt">Free Hardware books</a><br>
-&nbsp;<a href="http://www.onlinecomputerbooks.com/free-elearning-books.php" class="mnutxt">Free e-Learning books</a><br>
-&nbsp;<a href="http://www.onlinecomputerbooks.com/free-smalltalk-books.php" class="mnutxt">Free Smalltalk books</a><br>
-&nbsp;<a href="http://www.onlinecomputerbooks.com/free-lisp-books.php" class="mnutxt">Free Lisp books</a><br>
+
+
+
+</div>
+<!-- end of left column -->
+<!-- right column -->
+<div id="rh-col">
+ &nbsp;<a href="http://www.onlinecomputerbooks.com/blog/" class="mnutxt">Free Books Blog</a><br>
+&nbsp;<a href="http://www.onlinecomputerbooks.com/freechapters/" class="mnutxt">Free Chapters</a><br>
+&nbsp;<a href="http://www.onlinecomputerbooks.com/java-news.php" class="mnutxt">Latest Java News</a><br>
+<script language="javascript">
+document.write("&nbsp;<a class='mnutxt' href=\"javascript:bm('OnlineComputerBooks.com - "+encodeURIComponent(document.title)+"', '"+encodeURIComponent(document.location.href)+"')\">Bookmark this page</a>");
+</script>&nbsp;<a class="mnutxt" href="javascript:bm('OnlineComputerBooks.com - Privacy%20policy', 'https%3A%2F%2Fweb.archive.org%2Fweb%2F20071231164252id_%2Fhttp%253A%2F%2Fwww.onlinecomputerbooks.com%2Fprivacy-policy.php')">Bookmark this page</a>
+<br>&nbsp;<a class="mnutxt" href="http://www.onlinecomputerbooks.com/link-to-us.php">Link to this site</a>
+<br>&nbsp;<a class="mnutxt" href="http://www.onlinecomputerbooks.com/tellyourfriends.php">Tell your friends</a>
+<br><br>
+<!-- AddThis Bookmark Button BEGIN -->
+<script type="text/javascript">
+  addthis_url    = location.href;   
+  addthis_title  = document.title;  
+  addthis_pub    = 'gayanb';     
+</script><script type="text/javascript" src="http://s7.addthis.com/js/addthis_widget.php?v=12"></script>
+<!-- AddThis Bookmark Button END -->
+
+
+<br><br>
+<div align="center" class="boldtxt"><a href="http://www.onlinecomputerbooks.com/subscribe.php">Subscribe</a> to receive<br>updates from this site.</div>
+<br>
 &nbsp;<a href="http://www.onlinecomputerbooks.com/free-computing-books.php" class="mnutxt">Free Computing books</a><br>
 &nbsp;<a href="http://www.onlinecomputerbooks.com/free-artificial-intelligence-books.php" class="mnutxt">Free AI books</a><br>
 &nbsp;<a href="http://www.onlinecomputerbooks.com/free-j2me-books.php" class="mnutxt">Free J2ME books</a><br>
@@ -137,38 +193,22 @@ urchinTracker();
 &nbsp;<a href="http://www.onlinecomputerbooks.com/free-ada-books.php" class="mnutxt">Free Ada books</a><br>
 &nbsp;<a href="http://www.onlinecomputerbooks.com/free-game-programming-books.php" class="mnutxt">Free Game Prog. books</a><br>
 &nbsp;<a href="http://www.onlinecomputerbooks.com/free-internet-books.php" class="mnutxt">Free Internet books</a><br>
-
-</div>
-<!-- end of left column -->
-<!-- right column -->
-<div id="rh-col">
- &nbsp;<a href="http://www.onlinecomputerbooks.com/java-news.php" class="mnutxt">Latest Java News</a><br>
-<script language="javascript">
-document.write("&nbsp;<a target='_blank' class='mnutxt' href='http://digg.com/submit?phase=2&url="+encodeURIComponent(document.location.href)+ "&title="+encodeURIComponent(document.title)+"'>Digg this</a><br/>");
-document.write("&nbsp;<a target='_blank' class='mnutxt' href='http://del.icio.us/post?url="+encodeURIComponent(document.location.href)+ "&title="+encodeURIComponent(document.title)+"'>Add to Del.icio.us</a><br/>");
-document.write("&nbsp;<a target='_blank' class='mnutxt' href='http://reddit.com/submit?url="+encodeURIComponent(document.location.href)+ "&title="+encodeURIComponent(document.title)+"'>Add to Reddit!</a><br/>");
-document.write("&nbsp;<a target='_blank' class='mnutxt' href='http://blinklist.com/index.php?Action=Blink/addblink.php&Description=&Url="+encodeURIComponent(document.location.href)+ "&Title="+encodeURIComponent(document.title)+"'>Add to Blinklist</a><br/>");
-document.write("&nbsp;<a target='_blank' class='mnutxt' href='http://www.furl.net/storeIt.jsp?t="+encodeURIComponent(document.title)+ "&u="+encodeURIComponent(document.location.href)+"'>Add to Furl</a><br/>");
-document.write("&nbsp;<a target='_blank' class='mnutxt' href='http://myweb2.search.yahoo.com/myresults/bookmarklet?t="+encodeURIComponent(document.title)+ "&u="+encodeURIComponent(document.location.href)+"'>Add to Yahoo! My Web</a><br/>");
-document.write("&nbsp;<a target='_blank' class='mnutxt' href='http://www.spurl.net/spurl.php?url="+encodeURIComponent(document.location.href)+ "&title="+encodeURIComponent(document.title)+"'>Add to SPURL</a><br/>");
-document.write("&nbsp;<a target='_blank' class='mnutxt' href='http://www.rawsugar.com/pages/tagger.faces?turl="+encodeURIComponent(document.location.href)+ "&tttl="+encodeURIComponent(document.title)+"'>Add to RawSugar</a><br/>");
-document.write("&nbsp;<a target='_blank' class='mnutxt' href='http://simpy.com/simpy/LinkAdd.do?title="+encodeURIComponent(document.title)+ "&href="+encodeURIComponent(document.location.href)+"'>Add to Simpy</a><br/>");
-document.write("&nbsp;<a class='mnutxt' href=\"javascript:bm('OnlineComputerBooks.com - "+encodeURIComponent(document.title)+"', '"+encodeURIComponent(document.location.href)+"')\">Bookmark this page</a>");
-</script>&nbsp;<a target="_blank" class="mnutxt" href="http://digg.com/submit?phase=2&amp;url=https%3A%2F%2Fweb.archive.org%2Fweb%2F20070618070638id_%2Fhttp%253A%2F%2Fwww.onlinecomputerbooks.com%2Fprivacy-policy.php&amp;title=Privacy%20policy">Digg this</a><br>&nbsp;<a target="_blank" class="mnutxt" href="http://del.icio.us/post?url=https%3A%2F%2Fweb.archive.org%2Fweb%2F20070618070638id_%2Fhttp%253A%2F%2Fwww.onlinecomputerbooks.com%2Fprivacy-policy.php&amp;title=Privacy%20policy">Add to Del.icio.us</a><br>&nbsp;<a target="_blank" class="mnutxt" href="http://reddit.com/submit?url=https%3A%2F%2Fweb.archive.org%2Fweb%2F20070618070638id_%2Fhttp%253A%2F%2Fwww.onlinecomputerbooks.com%2Fprivacy-policy.php&amp;title=Privacy%20policy">Add to Reddit!</a><br>&nbsp;<a target="_blank" class="mnutxt" href="http://blinklist.com/index.php?Action=Blink/addblink.php&amp;Description=&amp;Url=https%3A%2F%2Fweb.archive.org%2Fweb%2F20070618070638id_%2Fhttp%253A%2F%2Fwww.onlinecomputerbooks.com%2Fprivacy-policy.php&amp;Title=Privacy%20policy">Add to Blinklist</a><br>&nbsp;<a target="_blank" class="mnutxt" href="http://www.furl.net/storeIt.jsp?t=Privacy%20policy&amp;u=https%3A%2F%2Fweb.archive.org%2Fweb%2F20070618070638id_%2Fhttp%253A%2F%2Fwww.onlinecomputerbooks.com%2Fprivacy-policy.php">Add to Furl</a><br>&nbsp;<a target="_blank" class="mnutxt" href="http://myweb2.search.yahoo.com/myresults/bookmarklet?t=Privacy%20policy&amp;u=https%3A%2F%2Fweb.archive.org%2Fweb%2F20070618070638id_%2Fhttp%253A%2F%2Fwww.onlinecomputerbooks.com%2Fprivacy-policy.php">Add to Yahoo! My Web</a><br>&nbsp;<a target="_blank" class="mnutxt" href="http://www.spurl.net/spurl.php?url=https%3A%2F%2Fweb.archive.org%2Fweb%2F20070618070638id_%2Fhttp%253A%2F%2Fwww.onlinecomputerbooks.com%2Fprivacy-policy.php&amp;title=Privacy%20policy">Add to SPURL</a><br>&nbsp;<a target="_blank" class="mnutxt" href="http://www.rawsugar.com/pages/tagger.faces?turl=https%3A%2F%2Fweb.archive.org%2Fweb%2F20070618070638id_%2Fhttp%253A%2F%2Fwww.onlinecomputerbooks.com%2Fprivacy-policy.php&amp;tttl=Privacy%20policy">Add to RawSugar</a><br>&nbsp;<a target="_blank" class="mnutxt" href="http://simpy.com/simpy/LinkAdd.do?title=Privacy%20policy&amp;href=https%3A%2F%2Fweb.archive.org%2Fweb%2F20070618070638id_%2Fhttp%253A%2F%2Fwww.onlinecomputerbooks.com%2Fprivacy-policy.php">Add to Simpy</a><br>&nbsp;<a class="mnutxt" href="javascript:bm('OnlineComputerBooks.com - Privacy%20policy', 'https%3A%2F%2Fweb.archive.org%2Fweb%2F20070618070638id_%2Fhttp%253A%2F%2Fwww.onlinecomputerbooks.com%2Fprivacy-policy.php')">Bookmark this page</a>
-<br>&nbsp;<a class="mnutxt" href="http://www.onlinecomputerbooks.com/link-to-us.php">Link to this site</a>
-<br>&nbsp;<a class="mnutxt" href="http://www.onlinecomputerbooks.com/tellyourfriends.php">Tell your friends</a>
-
-
-<br><br>
-<div align="center" class="boldtxt"><a href="http://www.onlinecomputerbooks.com/subscribe.php">Subscribe</a> to receive<br>updates from this site.</div>
-<br>
+&nbsp;<a href="http://www.onlinecomputerbooks.com/free-ruby-books.php" class="mnutxt">Free Ruby books</a><br>
+&nbsp;<a href="http://www.onlinecomputerbooks.com/free-apache-books.php" class="mnutxt">Free Apache books</a><br>
+&nbsp;<a href="http://www.onlinecomputerbooks.com/free-elearning-books.php" class="mnutxt">Free e-Learning books</a><br>
+&nbsp;<a href="http://www.onlinecomputerbooks.com/free-smalltalk-books.php" class="mnutxt">Free Smalltalk books</a><br>
+&nbsp;<a href="http://www.onlinecomputerbooks.com/free-lisp-books.php" class="mnutxt">Free Lisp books</a><br>
 &nbsp;<a href="http://www.onlinecomputerbooks.com/free-book-promotions.php" class="mnutxt">Free Book Promotions</a><br>
 &nbsp;<a href="http://www.onlinecomputerbooks.com/free-engineering-books.php" class="mnutxt">Free Engineering books</a><br>
 &nbsp;<a href="http://www.onlinecomputerbooks.com/free-business-books.php" class="mnutxt">Free Business books</a><br>
 &nbsp;<a href="http://www.onlinecomputerbooks.com/free-electronics-books.php" class="mnutxt">Free Electronics books</a><br>
 &nbsp;<a href="http://www.onlinecomputerbooks.com/free-physics-books.php" class="mnutxt">Free Physics books</a><br>
 &nbsp;<a href="http://www.onlinecomputerbooks.com/free-math-books.php" class="mnutxt">Free Math books</a><br>
+&nbsp;<a href="http://www.onlinecomputerbooks.com/free-ebooks.php" class="mnutxt">Free ebooks</a><br>
 <br>
+<center>
+<a href="http://whos.amung.us/show/20gg1s5c"><img src="http://whos.amung.us/cwidget/20gg1s5c/eeeeee000000" alt="web stats" width="81" height="29" border="0"></a>
+</center>
 
 </div>
 <!-- end of right column -->
