coastal.com (archived on 2007-12-31)
{
  "alexa_rank": NaN,
  "analysis_subcorpus": true,
  "categories": "shopping",
  "char_count": 7768,
  "classifier_probability": 1.0,
  "cross_domain_homepage_redir": false,
  "flesch_ease": "difficult",
  "flesch_kincaid": 13.35,
  "homepage_snapshot_redirected_domain": "coastal.com",
  "homepage_snapshot_redirected_url": "https://web.archive.org/web/20070930194605id_/http://www.coastal.com/",
  "homepage_snapshot_url": "https://web.archive.org/web/20070930194605id_/http%3A//coastal.com",
  "interval": "2007_B",
  "link_text": "Security/Privacy Policy",
  "parked_domain": false,
  "phase": "B",
  "policy_domain": "coastal.com",
  "policy_filetype": "html",
  "policy_snapshot_url": "https://web.archive.org/web/20071231171509id_/http%3A//www.coastal.com/Security_Privacy_Policy.html",
  "policy_title": "Safety training, human resources (HR) training, maintenance and industrial skills training, healthcare training - Coastal Training",
  "policy_url": "coastal.com/Security_Privacy_Policy.html",
  "sha1": "47383c644757667bf7cf8f458bb302a4418caf84",
  "simhash": 16320788640482175597,
  "simhash_updated": false,
  "site_hostname": "coastal.com",
  "site_url": "http://coastal.com",
  "smog": 14.55,
  "strict_updated": false,
  "timestamp": "20071231171509",
  "word_count": 1257,
  "year": 2007
}

--- a/c/co/coa/coastal.com.html
+++ b/c/co/coa/coastal.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the coastal.com privacy policy that was archived on 2007-06-29.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20070629003234id_/http%3A//www.coastal.com/Security_Privacy_Policy.html) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the coastal.com privacy policy that was archived on 2007-12-31.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20071231171509id_/http%3A//www.coastal.com/Security_Privacy_Policy.html) for the most accurate reproduction.-->
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd"><html xmlns="http://www.w3.org/1999/xhtml"><head>
 <meta http-equiv="Content-Type" content="text/html; charset=windows-1252">
@@ -660,7 +660,7 @@ function getPageOffsetTop(el) {
 <center> </center><table width="760" id="maintable" cellspacing="0" cellpadding="0">
   <tbody><tr>
     <td colspan="3" id="header">
-	<div id="headimg1"><img src="http://www.coastal.com/images/new-header.gif" alt="Coastal Training Technologies Corp." width="780" height="84" usemap="#CoastalLogoMap"><map name="CoastalLogoMap" id="CoastalLogoMap"><area shape="rect" coords="2,3,200,85" href="http://www.coastal.com/" border="0"> </map></div>
+	<div id="headimg1"><img src="http://www.coastal.com/images/new-header.gif" alt="Coastal Training Technologies Corp." width="780" height="84" border="0" usemap="#CoastalLogoMap"><map name="CoastalLogoMap" id="CoastalLogoMap"><area shape="rect" coords="2,3,200ttp://www.coastal.com/" border="0"> </map></div>
 
 	<!--BEGIN BOLD CHAT BUTTON CODE FOR GENERAL SITE HERE -->
 	<!--BEGIN BOLD CHAT BUTTON CODE FOR GENERAL SITE HERE -->
@@ -685,11 +685,11 @@ function getPageOffsetTop(el) {
 <a class="menuButton" href="" onclick="return buttonClick(event, 'alldMenu');" onmouseover="buttonMouseover(event, 'alldMenu');">Training Topics</a>
 		&nbsp;&nbsp;
 <a class="menuButton" href="" onclick="return buttonClick(event, 'prodMenu');" onmouseover="buttonMouseover(event, 'prodMenu');">Products &amp; Services</a>
-		&nbsp;&nbsp;&nbsp;
-<a class="menuButton" href="http://www.claritynet.com">Online Training</a>
-		&nbsp;&nbsp;&nbsp;
+		&nbsp;&nbsp;
+<a class="menuButton" href="http://www.coastal.com/onlinetraining.html">Online Training</a>
+		&nbsp;&nbsp;
 <a class="menuButton" href="" onclick="return buttonClick(event, 'helpMenu');" onmouseover="buttonMouseover(event, 'helpMenu');">Assistance</a>
-		&nbsp;&nbsp;&nbsp;
+		&nbsp;&nbsp;
 <a class="menuButton" href="" onclick="return buttonClick(event, 'intlMenu');" onmouseover="buttonMouseover(event, 'intlMenu');">International</a>
 </div>
 
@@ -1166,7 +1166,7 @@ Skills Training</a>
 <script language="JavaScript"><!--
 document.write('<scr' + 'ipt language="JavaScript" src="https://vms.boldchat.com/aid/8963064684736184659/bc.vms/vms.js?vr=&amp;vi=&amp;vn=&amp;vp=&amp;ve=&amp;wdid=4342262872660676852&amp;url=' + escape(document.location.href) + '"></scr' + 'ipt>');
 //-->
-</script><script language="JavaScript" src="https://vms.boldchat.com/aid/8963064684736184659/bc.vms/vms.js?vr=&amp;vi=&amp;vn=&amp;vp=&amp;ve=&amp;wdid=4342262872660676852&amp;url=https%3A//web.archive.org/web/20070629003234id_/http%253A//www.coastal.com/Security_Privacy_Policy.html"></script>
+</script><script language="JavaScript" src="https://vms.boldchat.com/aid/8963064684736184659/bc.vms/vms.js?vr=&amp;vi=&amp;vn=&amp;vp=&amp;ve=&amp;wdid=4342262872660676852&amp;url=https%3A//web.archive.org/web/20071231171509id_/http%253A//www.coastal.com/Security_Privacy_Policy.html"></script>
 <noscript>
 <a href="http://www.boldchat.com" title="Visitor Monitoring" target="_blank"><img alt="Visitor Monitoring" src="https://vms.boldchat.com/aid/8963064684736184659/bc.vmi?wdid=4342262872660676852&amp;vr=&amp;vi=&amp;vn=&amp;vp=&amp;ve=" border="0" width="1" height="1"></a>
 </noscript>
