dillards.com (archived on 2007-12-31)
{
  "alexa_rank": NaN,
  "analysis_subcorpus": true,
  "categories": "shopping",
  "char_count": 19447,
  "classifier_probability": 0.86,
  "cross_domain_homepage_redir": false,
  "flesch_ease": "difficult",
  "flesch_kincaid": 11.27,
  "homepage_snapshot_redirected_domain": "dillards.com",
  "homepage_snapshot_redirected_url": "https://web.archive.org/web/20071001102003id_/http://www.dillards.com/",
  "homepage_snapshot_url": "https://web.archive.org/web/20071001102003id_/http%3A//dillards.com",
  "interval": "2007_B",
  "link_text": "Privacy",
  "parked_domain": false,
  "phase": "B",
  "policy_domain": "dillards.com",
  "policy_filetype": "html",
  "policy_snapshot_url": "https://web.archive.org/web/20071231172006id_/http%3A//www.dillards.com/info/notices.jsp%23PrivacyPolicy",
  "policy_title": "Dillard's.com | Company Notices and Terms of Use",
  "policy_url": "dillards.com/info/notices.jsp#PrivacyPolicy",
  "sha1": "0375f1b4238ffa636c6f0ec41cadcd807f6f3440",
  "simhash": 10078239514302369494,
  "simhash_updated": false,
  "site_hostname": "dillards.com",
  "site_url": "http://dillards.com",
  "smog": 14.98,
  "strict_updated": true,
  "timestamp": "20071231172006",
  "word_count": 3163,
  "year": 2007
}

--- a/d/di/dil/dillards.com.html
+++ b/d/di/dil/dillards.com.html
@@ -1,12 +1,12 @@
-<!--The following is the downloaded HTML source of the dillards.com privacy policy that was archived on 2007-06-13.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20070613212147id_/http%3A//www.dillards.com/info/notices.jsp%23PrivacyPolicy) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the dillards.com privacy policy that was archived on 2007-12-31.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20071231172006id_/http%3A//www.dillards.com/info/notices.jsp%23PrivacyPolicy) for the most accurate reproduction.-->
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd"><html><head>
 <title>Dillard's.com | Company Notices and Terms of Use</title>
 <meta http-equiv="Content-Type" content="text/html; charset=iso-8859-1">
+
 <link rel="shortcut icon" href="/favicon.ico" type="image/x-icon">
-
-
+<script type="text/javascript" src="/js/holidaypopup.js"></script>
 <link rel="stylesheet" href="/css/shopping.css">
 
 <script language="JavaScript">
@@ -33,31 +33,101 @@
 
 
 <div id="header">
+
+
+
 	<div id="header1">
+
+
+
 		<div id="logo">
+
+
+
 		<a href="/index.html"><span class="hide">Dillards.com</span></a>
+
+
+
 		</div>
+
+
+
 		<div id="shophelp">
+
 			<ul>
+
 				<li><a href="/webapp/wcs/stores/servlet/LogonForm?langId=-1&amp;storeId=301&amp;catalogId=301&amp;rURL=LogonForm">My Shopper ID</a></li>
+
 				<li><a href="/webapp/wcs/stores/servlet/OrderCalculate?URL=OrderItemDisplay&amp;langId=-1&amp;storeId=301&amp;catalogId=301&amp;updatePrices=1&amp;calculationUsageId=-1&amp;calculationUsageId=-2&amp;orderId=.">Shopping Bag</a></li>
+
 				<li><a href="/orderstatus/Verify.do">Order Status</a></li>
+
 				<li><a href="/ebpp/Splash.jsp" class="last">Credit Card Services</a></li>
+
 			</ul>
+
 		</div>
+
+      <div id="email_inner" style="width: 450px; margin: 0;">
+        <form method="post" name="EmailRequest" action="/catalogrequest/EmailRequestStartServlet">
+          <!--Be the first to know! Join our email list-->Be the first to know! Join our email list &nbsp;
+          <input name="email" type="text" value="enter email address" size="25" onfocus="this.value='';" class="psearch">
+          <input src="/images/arrow.gif" alt="join our email list" name="go" type="image" border="0" style="vertical-align: text-bottom">
+        </form>
+      </div>
+
 	</div>
+
+
+
 	<div id="sitenav">
+
+
+
 		<ul>
+
+
+
 			<li><a href="/endeca/EndecaStartServlet">Shop Online</a></li>
+
+
+
 			<li><a href="/wishlist/WLMasterServlet?intent=REGHOME">Wedding &amp; Gift Registries</a></li>
+
+
+
 			<li><a href="http://catalogs.shoplocal.com/dillards/">Catalogs</a></li>
+
+
+
 			<li><a href="/html/travel/travel.shtml">Travel</a></li>
+
+
+
 			<li><a href="/html/salonspa/index.shtml">Salon &amp; Spa</a></li>
+
+
+
 			<li><a href="/sec/SecHeaderServlet?secflag=s">Store Locator</a></li>
+
+
+
 			<li><a class="last" href="/sec/FavoriteStoresServlet">My Dillard's</a></li>
+
+
+
 		</ul>
+
+
+
 	</div>
+
+
+
 </div>
+
+
+
 
 
 <script>domainName='://www.dillards.com/';</script>
@@ -246,12 +316,16 @@
       <p> The merchandise may be mailed back to us, or returned to 
         any Dillard's location. Please leave all merchandise tags attached. Also, 
         please note that if you choose to mail the merchandise back, you will 
-        be responsible for the postage. No refunds are given on shipping and handling 
+        be responsible for the postage. We recommend that you insure the package and
+        ship via a traceable method. No refunds are given on shipping and handling 
         charges.  Personalized items cannot be returned.</p>
-     <br>  
- <b>Merchandise Return Policy:</b>
-     <br>
-     <br>
+
+   <p> Address package to:<br>
+       Dillard's<br>
+       444 Brick Church Park Drive<br>
+       Nashville, TN 37207-3216
+   </p>
+
    <p>Dillard's will issue a refund in the form and amount 
         of the original tender paid (including sales tax) or Dillard's will issue 
         a Merchandise Credit, at the customer's choice, when each of the following 
@@ -399,7 +473,7 @@ completing your order, please check your privacy settings in your browser. We fi
 Privacy Settings will optimize your online shopping experience at Dillards.com. If you are 
 currently using the "Medium High" or "High" privacy settings, you can improve your online 
 ordering experience if you override your current cookie handling practices for specific websites, 
-including Dillards.com. Please click here for instructions on how to override your normal 
+including Dillards.com. Please <a href="/info/cookies.jsp">click here</a> for instructions on how to override your normal 
 privacy/cookie handling practices. If you prefer not to change your privacy settings or override 
 your cookie handling practices, you can, as always, place your Dillard’s order by phone at 
 1-800-345-5273.
@@ -410,7 +484,7 @@ us to assess and improve our website and other services. These companies may use
 beacons, or similar technology to collect and analyze information about our online traffic, on 
 our behalf. These third parties are prohibited by our contracts with them from sharing that 
 information with anyone other than us. However, if you would like to opt out of these third 
-party services, please <a href="cookie_opt_out.jsp" target="_blank">click here</a>.
+party services, please <a href="http://www.omniture.com/optout" target="blank">click here</a>.
 </p>
 
 <h3><a name="ChangePreferences"></a>5. How You Can Change Your Preferences or “Email Opt Out” </h3>
@@ -656,33 +730,63 @@ var s_code=s.t();if(s_code)document.write(s_code)
 
 
 <div id="footer">
-	<div id="email_outer">
+
+	<!--<div id="email_outer">
+
 		<div id="email_inner">
+
 			<form method="post" name="EmailRequest" action="/catalogrequest/EmailRequestStartServlet">
+
 				join our email list&nbsp;
-				<input name="email" type="text" value="enter email address" size="25" onfocus="this.value='';" class="psearch">
-				<input src="/images/arrow.gif" alt="join our email list" name="go" type="image" style="vertical-align: text-bottom">
+
+				<input name="email" type="text" value="enter email address" size="25" onfocus="this.value='';"  class="psearch" />
+
+				<input src="/images/arrow.gif" alt="join our email list" name="go" type="image" style="vertical-align: text-bottom" />
+
 			</form>
+
 		</div>
-	</div>
+
+	</div>-->
+
 	<div id="footerNav">
+
 		<ul>
+
 			<li><a href="http://www.shareholder.com/dillards/index.cfm">Investor Relations</a></li>
+
 			<li><a href="/sec/SecHeaderServlet?secflag=c">Careers</a></li>
+
 			<li><a href="/endeca/EndecaStartServlet?N=1603906">Gift Cards</a></li>
+
 			<li><a href="/info/recalls.jsp">Recalls</a></li>
+
 			<li><a href="/info/notices.jsp">Policies</a></li>
+
 			<li><a href="/info/notices.jsp#PrivacyPolicy">Privacy</a></li>
+
 			<li><a href="/faq/FaqStartServlet">FAQ</a></li>
+
 			<li><a href="/kana/KanaStartServlet">Contact Us</a></li>
+
 			<li><a href="/info/sitemap.jsp">Site Map</a></li>
-			<li><a href="/info/notices.jsp#ShippingPolicy" class="last">Shipping Policy</a></li>
+
+			<li><a href="/info/notices.jsp#ShippingPolicy">Shipping Policy</a>
+
+			</li><li><a href="/info/rfidInfo.jsp" class="last">RFID</a></li>
+
 		</ul>
+
 	</div>
+
 	<span class="copyright">Prices and sale offers may vary by store location, including dillards.com, and are subject to change.
+
 ©<script type="text/javascript">document.write(" "+new Date().getFullYear());</script> 2020 Dillard's, Inc. 
+
 </span>
+
 </div>
+
 
 
 
