--- a/x/xa/xap/xapads.com.html
+++ b/x/xa/xap/xapads.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the xapads.com privacy policy that was archived on 2007-06-17.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20070617040134id_/http%3A//www.xapads.com/privacy_policy.html) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the xapads.com privacy policy that was archived on 2007-12-31.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20071231185309id_/http%3A//www.xapads.com/privacy_policy.html) for the most accurate reproduction.-->
 
 <html><head>
 <title>Xapads:Biggest Contextual Advertising Network.</title>
@@ -132,12 +132,16 @@
 											We may collect and possibly share information in order to investigate, prevent, or take action regarding illegal activities, suspected fraud, situations involving potential threats to the physical safety of any person, violations of 's terms of use, or as otherwise required by law.<br><br>
 									
 									</p>
-									<p class="txtnormal"><b>Policy Updates</b><br>
-											All updates to this policy will be posted here. Contact at: support@Xapads.com to aid in processing your request, please include the following details: Contact information (your name, address, e-mail address, etc.) Name of  the program where you want the update applied Details of the request (e.g. change of e-mail address,  unsubscribe from a newsletter, review of personal information, etc.) Note: This policy also covers the personal information you provide to Customer Support.<br><br>
+									<p class="txtnormal"><b>Fraudlent Clicks</b><br>
+											Clicks on Xapads must result from genuine user interest. Any method that artificially generates clicks or impressions on your Xapads is strictly prohibited. These prohibited methods include but are not limited to repeated manual clicks or impressions, using robots, automated click and impression generating tools, third-party services that generate clicks or impressions such as paid-to-click, paid-to-surf, autosurf, and click-exchange programs, or any deceptive software. Please note that clicking on your own ads for any reason is prohibited. Failure to comply with this policy may lead to your account being disabled. To Know more about Account Disability, <a href="http://www.xapads.com/account-disabled.html">Please Click Here</a><br><br>
 
 									</p>
 
 
+									<p class="txtnormal"><b>Policy Updates</b><br>
+											All updates to this policy will be posted here. Contact at: support@Xapads.com to aid in processing your request, please include the following details: Contact information (your name, address, e-mail address, etc.) Name of  the program where you want the update applied Details of the request (e.g. change of e-mail address,  unsubscribe from a newsletter, review of personal information, etc.) Note: This policy also covers the personal information you provide to Customer Support.<br><br>
+
+									</p>
 								</td>
 							</tr>
 						</tbody></table>	
