--- a/i/in/inf/informatica.com.html
+++ b/i/in/inf/informatica.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the informatica.com privacy policy that was archived on 2007-04-27.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20070427192550id_/http%3A//www.informatica.com/company/privacy.htm) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the informatica.com privacy policy that was archived on 2007-12-31.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20071231200245id_/http%3A//www.informatica.com/company/privacy.htm) for the most accurate reproduction.-->
 
 <html><head>
 	<title>Company: Privacy Policy</title>
@@ -65,7 +65,7 @@ var s_eVar4=""
 var s_eVar5=""
 /********* INSERT THE DOMAIN AND PATH TO YOUR CODE BELOW ************/
 
-//--></script><script language="JavaScript" src="/nr/internet_2007/javascript/s_code_remote.js"></script><img name="s_i_informaticacom" height="1" width="1" border="0" alt="" src="https://102.112.2O7.net/b/ss/informaticacom/1/G.7-PD-R/s99083677689055?[AQB]&amp;ndh=1&amp;t=31/0/2020%2010%3A8%3A46%205%200&amp;pageName=Company%3A%20Privacy%20Policy&amp;g=https%3A//web.archive.org/web/20070427192550id_/http%253A//www.informatica.com/company/privacy.htm&amp;ch=company&amp;cc=USD&amp;s=800x600&amp;c=24&amp;j=1.3&amp;v=N&amp;k=Y&amp;bw=1366&amp;bh=768&amp;[AQE]">
+//--></script><script language="JavaScript" src="/nr/internet_2007/javascript/s_code_remote.js"></script><img name="s_i_informaticacom" height="1" width="1" border="0" alt="" src="https://102.112.2O7.net/b/ss/informaticacom/1/G.7-PD-R/s91085250399119?[AQB]&amp;ndh=1&amp;t=31/0/2020%2010%3A8%3A46%205%200&amp;pageName=Company%3A%20Privacy%20Policy&amp;g=https%3A//web.archive.org/web/20071231200245id_/http%253A//www.informatica.com/company/privacy.htm&amp;ch=company&amp;cc=USD&amp;s=800x600&amp;c=24&amp;j=1.3&amp;v=N&amp;k=Y&amp;bw=1366&amp;bh=768&amp;[AQE]">
 
 <!-- End SiteCatalyst code version: G.7. -->
 
@@ -182,7 +182,7 @@ var s_eVar5=""
 				<!--
 				<a href="?print=on"><img src="/nr/internet_2007/images/common/bread_print.gif" alt="Printer-friendly" border="0"></a>
 				-->
-				<a href="javascript:emailpopup();" onmouseover="window.status='Email This Page'; return true" onmouseout="window.status=''; return true;"><img src="/nr/internet_2007/images/common/bread_email.gif" alt="Email This Page" border="0"></a>
+<a href="javascript:emailpopup();" onmouseover="window.status='Email this page'; return true" onmouseout="window.status=''; return true;"><font color="131752">Email this page</font><img src="/nr/internet_2007/images/common/bread_email.gif" alt="Email this page" border="0" align="middle"></a>
 			</div>
 			<b><a href="/">Home</a></b> <img src="/nr/internet_2007/images/common/bread_arrow.gif" alt=">" width="3" height="6">
 			
@@ -283,6 +283,7 @@ var s_eVar5=""
 	</td>
     <td class="footer" height="22" align="right">
 	    <a href="/company/contact_us/default.htm" class="footer">Contact Us</a> &nbsp;|&nbsp;
+		<a href="/company/careers/default.htm" class="footer">Careers</a> &nbsp;|&nbsp;
 		<a href="/company/terms.htm" class="footer">Terms of Use</a> &nbsp;|&nbsp;
 		<a href="/company/privacy.htm" class="footer">Privacy Policy</a> &nbsp;|&nbsp;
 		<a href="/company/sitemap.htm" class="footer">Site Map</a>&nbsp;&nbsp;
@@ -298,17 +299,22 @@ var s_eVar5=""
 
 	<div id="footer-left"><a href="/company/trademarks.htm">©</a> 2007 Informatica Corporation. All rights reserved</div>
 	
-	<div id="footer-right"><a href="/company/contact_us/default.htm">Contact Us</a> &nbsp;|&nbsp; <a href="/company/terms.htm">Terms
-	    of Use</a> &nbsp;|&nbsp; <a href="/company/privacy.htm">Privacy Policy</a> &nbsp;|&nbsp; <a href="/company/sitemap.htm">Site
-    Map</a></div>
+	<div id="footer-right"><a href="/company/contact_us/default.htm">Contact Us</a> &nbsp;|&nbsp; 
+	<a href="/company/careers/default.htm">Careers</a> &nbsp;|&nbsp;
+	<a href="/company/terms.htm">Terms of Use</a> &nbsp;|&nbsp;
+	<a href="/company/privacy.htm">Privacy Policy</a> &nbsp;|&nbsp;
+	<a href="/company/sitemap.htm">Site Map</a>
+	</div>
 
 </div>
 <!-- End Print Foot -->
 <!-- End footer -->
 
 <script type="text/javascript" src="http://ai.aintermail.net/inf.th.shtml"></script>
-
 <script type="text/javascript" defer="" src="http://www3.informatica.com/informatica/tag.js"></script>
+
+<script language="JavaScript" src="http://www.informatica.com/nr/elqNow/elqCfg.js" type="text/javascript"></script>
+<script language="JavaScript" src="http://www.informatica.com/nr/elqNow/elqImg.js" type="text/javascript"></script>
 
 
 
