profilactic.com (archived on 2007-12-31)
{
  "alexa_rank": NaN,
  "analysis_subcorpus": true,
  "categories": "business",
  "char_count": 6759,
  "classifier_probability": 0.98,
  "cross_domain_homepage_redir": false,
  "flesch_ease": "difficult",
  "flesch_kincaid": 13.05,
  "homepage_snapshot_redirected_domain": "profilactic.com",
  "homepage_snapshot_redirected_url": "https://web.archive.org/web/20071001093548id_/http://www.profilactic.com/",
  "homepage_snapshot_url": "https://web.archive.org/web/20071001093548id_/http%3A//profilactic.com",
  "interval": "2007_B",
  "link_text": "Privacy Policy",
  "parked_domain": false,
  "phase": "B",
  "policy_domain": "profilactic.com",
  "policy_filetype": "html",
  "policy_snapshot_url": "https://web.archive.org/web/20071231210840id_/http%3A//www.profilactic.com/privacy.jsp",
  "policy_title": "Profilactic.com - Privacy Policy",
  "policy_url": "profilactic.com/privacy.jsp",
  "sha1": "b6f247e655e7c1ced79c179d67abfc8aca1fc973",
  "simhash": 16697940333929397259,
  "simhash_updated": false,
  "site_hostname": "profilactic.com",
  "site_url": "http://profilactic.com",
  "smog": 14.46,
  "strict_updated": false,
  "timestamp": "20071231210840",
  "word_count": 1109,
  "year": 2007
}

--- a/p/pr/pro/profilactic.com.html
+++ b/p/pr/pro/profilactic.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the profilactic.com privacy policy that was archived on 2007-06-25.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20070625093703id_/http%3A//www.profilactic.com/privacy.jsp) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the profilactic.com privacy policy that was archived on 2007-12-31.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20071231210840id_/http%3A//www.profilactic.com/privacy.jsp) for the most accurate reproduction.-->
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd"><html xmlns="http://www.w3.org/1999/xhtml"><head>
 <title>Profilactic.com - Privacy Policy</title>
@@ -23,7 +23,7 @@
 </script>
 
 <div class="header">
-  <div class="logo"><a href="index.jsp" title="Return to the Profilactic home page"><img src="../images/profilactic_logo.gif" alt="Profilactic -- preventing an online identity crisis" width="200" height="38" border="0"></a></div>
+  <div class="logo"><a href="index.jsp" title="Return to the Profilactic home page"><img src="../images/profilactic_logo_new.gif" alt="Profilactic -- preventing an online identity crisis" width="165" height="32" border="0"></a></div>
    
   <div class="topnav" align="right">Guest: <a href="signup.jspc" title="Get your free Profilactic membership">Sign up</a> | <a href="login.jspc" title="Log into your Profilactic account">Log in</a></div>
     
@@ -31,7 +31,7 @@
 </div>
   <div class="full">
     <h1>Privacy Policy</h1>
-    Set forth below is a description of how Aggregated Media LLC ("Aggregated Media") collects and uses information that it receives through this Web site (the "Site"). <br>
+    <p>Set forth below is a description of how Aggregated Media LLC ("Aggregated Media") collects and uses information that it receives through this Web site (the "Site"). <br>
     <br>
     <strong>Use of Site</strong><br>
     It is possible to use some services offered by the Site without registering and becoming a member. However, most of the Site’s services require membership registration and choosing a user name and password. If you become an Aggregated Media member, you will be required to provide some personal information as noted below. You are responsible for ensuring the accuracy of this information, and any inaccuracies may affect the information you receive when using the Site. <br>
@@ -71,10 +71,10 @@
     Aggregated Media LLC<br>
     PO Box 22404<br>
     Louisville, KY 40252<br>
-    <br>
+    </p><br>
     <br>
   </div>
-  <div class="footer"><div class="footer_l"><a href="index.jsp" title="Return to the Profilactic home page"><img src="images/profilactic_footer_logo.gif" alt="copyright Profilactic " width="347" height="29" border="0" align="absmiddle"></a></div><div class="footer_r">© 2006-2007 <a href="http://www.aggregatedmedia.com" title="Visit Aggregated Media" target="_blank">Aggregated Media LLC</a><span id="web"> | <a href="terms.jsp" title="Read our Terms of Use">Terms of Use</a> | <a href="privacy.jsp" title="Read our Privacy Policy">Privacy Policy</a> | <a href="faq.jsp" title="See our Frequently-Asked Questions">FAQ</a> | <a href="http://www.profilactic.com/blog/index.htm" title="Read our Building Profilactic blog">Our Blog</a></span></div><div class="clear"></div></div>
+  <div class="footer"><div class="footer_l"><a href="index.jsp" title="Profilactic - preventing an online identity crisis"><img src="images/profilactic_footer.gif" alt="copyright Profilactic " width="107" height="29" border="0" align="absmiddle"></a> Preventing an online identity crisis</div><div class="footer_r">© 2006-2007 <a href="http://www.aggregatedmedia.com" title="Visit Aggregated Media" target="_blank">Aggregated Media LLC</a><span id="web"> | <a href="about.jsp">Meet us</a> | <a href="terms.jsp" title="Read our Terms of Use">Terms of Use</a> | <a href="privacy.jsp" title="Read our Privacy Policy">Privacy Policy</a> | <a href="faq.jsp" title="See our Frequently-Asked Questions">FAQ</a> | <a href="http://www.profilactic.com/blog/index.htm" title="Read our Building Profilactic blog">Our Blog</a></span></div><div class="clear"></div></div>
 
   <br>
 </div>
